--- a/BrasilCultura/catalogo/templates/breve/embreve.html
+++ b/BrasilCultura/catalogo/templates/breve/embreve.html
@@ -6,37 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/tex.css' %}">
     <link rel="stylesheet" href="{% static 'css/style2.css' %}">
-    <title>homepage</title>
+    <title>Em Breve</title>
+
+    <link rel="shortcut icon" href="../../static/icons/breve.ico" type="image/x-icon">
 </head>
 <body>
 <header>
 
-    <img class='img1' src="{% static 'imgs/08.jpeg'%}" alt="Descrição da Imagem">
-    <navbar class='navbar'>
+  <img class='img1' src="{% static 'imgs/08.jpeg'%}" alt="Descrição da Imagem">
+  <navbar class='navbar'>
       <ul>
-      <a href="{% url 'pagina_inicial' %}" id="home-link">
-          <li> Home<li>
-      </a>
-
-      <a href="{% url 'emcartaz' %}" id="cartaz-link">
-          <li> Em Cartaz<li>
-      </a>
-
-      <a href="{% url 'embreve' %}" id="breve-link">
-          <li>Em Breve <li>
-      </a>
-
-      <a href="{% url 'pesquisa' %}" id="pesquisar-button">
-          <button type="submit">Pesquisar</button>
-      </a>
-
-  <a href="{% url 'login' %}" id="login-link">
-      <button type="submit">Login</button>
-  </a>
-
- <a href="{% url 'cadastro' %}" id="cadastro-link">
-     <button type="submit">Cadastro</button>
- </a>
+          <a href="{% url 'pagina_inicial' %}" id="home-link">
+              <li> Home<li>
+          </a>
+  
+          <a href="{% url 'emcartaz' %}" id="cartaz-link">
+              <li> Em Cartaz<li>
+          </a>
+  
+          <a href="{% url 'embreve' %}" id="breve-link">
+              <li>Em Breve <li>
+          </a>
+  
+          <a href="{% url 'pesquisa' %}" id="pesquisar-link">
+              <li>Pesquisar</li>
+          </a>
+  
+          <a href="{% url 'login' %}" id="login-link">
+              <li>Login</li>
+          </a>
+  
+          <a href="{% url 'cadastro' %}" id="cadastro-link">
+              <li>Cadastro</li>
+          </a>
       </ul>
   </navbar>
   
