--- a/BrasilCultura/catalogo/templates/breve/embreve.html
+++ b/BrasilCultura/catalogo/templates/breve/embreve.html
@@ -13,7 +13,7 @@
 <body>
 <header>
 
-  <img class='img1' src="{% static 'imgs/08.jpeg'%}" alt="Descrição da Imagem">
+  <img class='img1' src="{% static 'imgs/logo.png'%}" alt="Descrição da Imagem">
   <navbar class='navbar'>
       <ul>
           <a href="{% url 'pagina_inicial' %}" id="home-link">
