--- a/BrasilCultura/catalogo/static/css/tex.css
+++ b/BrasilCultura/catalogo/static/css/tex.css
@@ -1,21 +1,10 @@
-ul, li {
-    list-style: none;
-    display: inline-flex;
-    padding: 2px;
-    color: white;
-    text-align: center;
-    padding-left: 20px;
-    margin-left: 10px;
-    font-size: 1.5rem;
+* {
+    margin: 0;
+    padding: 0;
 }
 
 header {
     background-color: black;
-    margin-left: -10px;
-    width: 98.9vw;
-    margin-top: -10px;
-    height: 150px;
-    position: relative;
 }
 
 .flex {
@@ -23,6 +12,7 @@ header {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     padding-top: 20px;
+    margin: 0 auto;
 }
 
 .img {
@@ -38,21 +28,16 @@ body {
 .img1 {
     width: 10%;
     padding-left: 10px;
-    padding-top: -200px;
+    
 }
 
 .navbar {
-    margin-bottom: -500px;
-}
-
-
-h1::after, h1::before {
-    content: '';
-    display: inline-block;
-    width: 10px; /* Ajuste a largura conforme necessário */
-    height: 10px; /* Ajuste a altura conforme necessário */
-    background-color: yellow; /* Cor de destaque */
-    margin-left: 5px; /* Espaçamento entre os botões */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+    background: #23232e;
+    height: 8vh;
 }
 
 h1::after {
@@ -71,12 +56,6 @@ h1::before {
     font-weight: bolder;
 }
 
-.destaque {
-    font-size: 2.5rem;
-    padding: 0;
-    margin: 0;
-}
-
 .margin {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -92,11 +71,6 @@ footer {
     width: 98vw;
 }
 
-.img2 {
-    width: 15%;
-    margin-bottom: -30px;
-}
-
 .flex1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -108,20 +82,108 @@ p {
     color: white;
 }
 
-.navbar a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 20px; /* Ajuste o espaçamento conforme necessário */
+.nav-list {
+    list-style: none;
     display: flex;
-    align-items: center; /* Centralize verticalmente */
+    justify-content: space-between;
+  }
+  
+  .nav-list li {
+    letter-spacing: 3px;
+    margin-left: 30px;
+    border: 2px solid #ffffff; 
+    padding: 10px 15px; 
+    display: inline-block; 
+    transition: border-color 0.3s ease; 
+    border-radius: 10px;
+  }
+
+  .nav-list li:hover {
+    border-color: #ffcc00; /* Cor da borda ao passar o mouse */
 }
+  
+  .mobile-menu {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    transition: 0.3s;
+  }
 
 a {
+    color: #fff;
     text-decoration: none;
-    list-style: none;
-    display: inline-block;
-    padding: 10px;
+    transition: 0.3s;
+  }
+  
+a:hover {
+    opacity: 0.7;
 }
+
+@media (max-width: 999px) {
+    body {
+      overflow-x: hidden;
+    }
+    .nav-list {
+      position: absolute;
+      top: 8vh;
+      right: 0;
+      width: 50vw;
+      height: 92vh;
+      background: #23232e;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in;
+    }
+    .nav-list li {
+      margin-left: 0;
+      opacity: 0;
+    }
+    .mobile-menu {
+      display: block;
+    }
+  }
+
+@media (max-width: 768px) {
+    .flex {
+        grid-template-columns: 1fr;
+        margin: 0 auto;
+    }
+}
+  
+  .nav-list.active {
+    transform: translateX(0);
+  }
+  
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
 
 
 
