--- a/BrasilCultura/catalogo/templates/paginaInicial/home.html
+++ b/BrasilCultura/catalogo/templates/paginaInicial/home.html
@@ -27,12 +27,13 @@
           <li><a href="{% url 'pesquisa' %}">Pesquisar</a></li>
           {% if user.is_authenticated %}
           <li><a href="{% url 'logout' %}">Logout</a></li>
+          <li><a href="{% url 'favoritos' %}" id="favoritosLink">Favoritos</a></li>
           <li style="color: white;">Bem-vindo, {{ user.username }}!</li>
           {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
-          {% endif %}
           <li><a href="{% url 'cadastro' %}">Cadastro</a></li>
-
+          {% endif %}
+          
         </ul>
       </nav>
   
