--- a/BrasilCultura/catalogo/static/css/style2.css
+++ b/BrasilCultura/catalogo/static/css/style2.css
@@ -3,16 +3,28 @@ body{
   background: white;
 }
 .flex23{
-display: grid;
-padding-top: 20px;
-grid-template-columns: 1fr 1fr;
- 
-}.img23{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+.flex23 img {
+  max-width: 100%;
+  height: auto;
+  margin: 10px;
+}
+
+.flex23 div {
+  flex: 1;
+}
+
+.img23{
   width: 50%;
 }
 .pi{
   color: black;
-  margin-top: 120px;
+  margin-top: 10px;
 }
 img{
   width: 50%;
@@ -94,6 +106,14 @@ main {
     justify-content: space-around;
     transform: translateX(100%);
     transition: transform 0.3s ease-in;
+  }
+  .flex23 {
+    flex-direction: column;
+  }
+
+  .flex23 img {
+    margin-right: 0;
+    margin-bottom: 10px;
   }
   .nav-list li {
     margin-left: 0;
